--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Hello, world! Eu sou Rodolfo Gaspar
+title: The Dev is on the Table
 description: > # this means to ignore newlines until "baseurl:"
   descrição
 permalink: ':title/'
