--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Rodolfo Gaspar # add your name
-author-img:  # add your photo
+author-img: rodolfo_charge.jpeg # add your photo
 about-author: Programador. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
@@ -17,7 +17,7 @@ social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier:  # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
