--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Rodolfo Gaspar # add your name
 author-img: rodolfo_charge.jpeg # add your photo
 about-author: Programador. # add description
-social-twitter: # add your Twitter handle
+social-twitter: @rodolfo_gaspar # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: rodolfogaspar # add your Github handle
 social-linkedin: # add your Linkedin handle
