--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: http://devsontable.com/
 permalink: ':title/'
 
 markdown: kramdown
-baseurl: "/karna"
+baseurl: "/karna<@L1f0rn14"
 full-version: "http://webjeda.com/karna-full/"
 
 sass:
